# Doppel

./: .env.local.example  .gitignore  OWNERSHIP.md  README.md  package-lock.json  package.json  render.yaml  tailwind.config.ts
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
backend/: athlete.db  badges.py  db.py  io.md  main.py  proof.py  requirements.txt
backend/ml/: evaluate_model.py  generate_cv_features.py  generate_labels.py  predict.py
backend/models/: evaluation_metrics.json  evaluation_metrics_no_mqs.json  feature_importance.csv  feature_importance_no_mqs.csv  sanity_checks.json  sanity_checks_no_mqs.json
components/camera/: CameraError.tsx  FormPill.tsx  PoseCamera.tsx  SkeletonOverlay.tsx
components/dashboard/: FingerprintCard.tsx  ProfileForm.tsx  ProjectionCard.tsx  RadarChart.tsx
components/simulator/: GrowthCurve.tsx  PlanCompare.tsx  WhatIfSliders.tsx
cvModel/: plan.md  plan2.md  suggestion.md
cvModel/ml/: evaluate_model.py  generate_cv_features.py  generate_labels.py  predict.py  train_model.py
cvModel/models/: evaluation_metrics.json  feature_columns.json  feature_importance.csv  sanity_checks.json
frontend/: .env.local.example  COACH_README.md  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/scripts/: mint-badge.mjs
frontend/src/: middleware.ts
lib/: utils.ts
lib/pose/: analyzer.ts  constants.ts  mockData.ts  types.ts
solana/athlete-proof/programs/athlete-proof/: Cargo.toml
solana/athlete-proof/programs/athlete-proof/src/: lib.rs
types/: index.ts
(+91 files in other folders)
