[package]
name = "athlete-proof"
version = "0.1.0"
description = "AthleteTwin onchain training proof program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "athlete_proof"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
